# feishu-bot-claude-windows

./: README.md  pyproject.toml  setup.ps1  uninstall.ps1
feishu_bot_claude_win/: __main__.py  cli.py
feishu_bot_claude_win/config/: __init__.py  keychain.py
feishu_bot_claude_win/daemon/: __init__.py  feishu.py  handlers.py  inbound.py  jsonl_watcher.py  orchestrator.py  outbound.py  server.py
feishu_bot_claude_win/rendering/: mermaid.py  status.py  tools.py  turn.py
scripts/: install-commands.sh
tests/golden/: test_golden_cards.py
tests/golden/expected/: turn_simple.card.json  turn_with_bash_long.card.json  turn_with_read.card.json  turn_with_subagent.card.json
tests/integration/: test_cli_socket.py  test_daemon_entry.py  test_lifecycle.py  test_state_recovery.py
tests/unit/: test_auth.py  test_binding_config.py  test_binding_store.py  test_card_builders.py  test_cli_renderer.py  test_confirmation.py  test_dispatcher.py  test_feishu_fake.py  test_handlers.py  test_inbound.py  test_jsonl_watcher.py  test_keychain.py  test_menu_push.py  test_menu_template.py  test_mermaid_rendering.py  test_orchestrator.py  test_outbound.py  test_p0_regressions.py  test_proto.py  test_ratelimit.py  test_server.py  test_smoke.py  test_state.py  test_tmux_fake.py  test_tool_rendering.py  test_turn_grouping.py  test_uploads.py
