[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-bot-claude-win"
version = "0.1.0"
description = "Bridge local Claude Code TUI to dedicated Feishu bots (Windows-native)"
requires-python = ">=3.11"
dependencies = [
    "tomli-w >= 1.0.0",
    "click >= 8.1.0",
    "watchfiles >= 0.21.0",
]

[project.optional-dependencies]
# Windows-only runtime extras. Install with: pip install -e .[win]
win = [
    "pywin32 >= 306; platform_system == 'Windows'",
]
dev = [
    "pytest >= 8.0.0",
    "pytest-asyncio >= 0.23.0",
    "pytest-cov >= 5.0.0",
]

[project.scripts]
feishu-bot-claude = "feishu_bot_claude_win.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["feishu_bot_claude_win"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
source = ["feishu_bot_claude_win"]
branch = true
